[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entrolytics-ng"
version = "2.0.0"
description = "Python SDK for Entrolytics - First-party growth analytics for the edge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Entrolytics", email = "hey@ng.entrolytics.click" }
]
keywords = [
    "entrolytics",
    "entrolytics-ng",
    "analytics",
    "tracking",
    "web-analytics",
    "server-side"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: FastAPI",
    "Framework :: Flask",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
django = [
    "django>=4.0",
]
fastapi = [
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
]
flask = [
    "flask>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
all = [
    "entrolytics-ng[django,fastapi,flask]",
]

[project.urls]
Homepage = "https://ng.entrolytics.click"
Documentation = "https://docs.entrolytics.click/sdks/python"
Repository = "https://github.com/entrolytics/entrolytics-ng/tree/main/packages/python"
Issues = "https://github.com/entrolytics/entrolytics-ng/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/entrolytics"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
